Make product couples widget

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -19,6 +19,7 @@ ru:
         factory: Фабрика-производитель
         factory_country: Страна-производитель
         factory_url: Ссылка на сайт фабрики-производителя
+        keywords: Ключевые слова
         name: Название
         path_id: Сегмент URL
         position: Порядок отображения
